# payouts_service

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
config/: settings.py  urls.py
config/configs/: celery_config.py  drf_config.py
payouts/: middleware.py  models.py  models_idempotency.py  services.py  tasks.py
payouts/api/: serializers.py  urls.py  views.py
payouts/migrations/: 0001_initial.py  0002_idempotencykey.py
payouts/tests/: conftest.py  test_api_create.py  test_api_validation.py  test_celery_task.py  test_idempotency.py
